--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root {
+  --primero:#DEE0E5;
+  --segundo:#64A7C6;
+  --tercero: pink;
+  --cuarto:#848484;
+  --quinto: #588884;
+  --sexto: #A1A1A4;
+  --septimo: #EF42A3;
+  --optavo:#A44CC0; }
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +22,149 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.activado{
+  font-weight: bold;
+  font-size: 18px;
+  color: rgb(125, 58, 232);
+  text-decoration: none;
+}
+
+.header{
+  height: 140px;
+  background:#EF42A3;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .logo{
+  flex-grow: 2;
+  display: flex;
+}
+
+.header .logo span{
+  display: block;
+  font-size: 50px;
+  font-weight: bolder;
+
+}
+
+
+
+.header nav{
+  flex-grow: 1;
+  
+  
+}
+.header nav ul{
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  list-style: none;
+
+}
+
+.header li{
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+ 
+}
+
+header li a{
+  color:rgb(85, 81, 81);
+  text-decoration: none;
+  transition: all 200ms;
+}
+
+.header a:hover{
+  color:black;
+}
+
+.leyenda{
+  background-color:#64A7C6;
+  height: 70px;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.leyenda h1{
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  height: 100%;
+  margin: 1px;
+  font-size: 25px;
+
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  -webkit-animation: marquee 10s linear infinite;
+  animation: marquee 10s linear infinite;
+}
+
+@-webkit-keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+     
+  
+}
+img {
+  display: flex;
+  width: 200px;
+  height: 200px;
+}
+
+.submenu {
+  display: none;
+  position:absolute;
+  top: 20%;
+  left: 0;
+  z-index: 0;
+  background-color:#e0e0e0;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  padding: 0;
+  margin: 0;
+}
+
+.submenu li {
+  display: block;
+  width: 100%;
+}
+
+.submenu a {
+  display: block;
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+  transition: background-color 0.2s ease;
+}
+
+.submenu a:hover {
+  background-color:#EF42A3;
+}
+
+.dropdown.activado .submenu {
+  display:flex;
 }
